--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "dependencies": {
         "@ant-design/icons": "^5.1.4",
         "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.36",
@@ -40,5 +39,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@testing-library/react": "^14.0.0",
+        "history": "^5.3.0"
     }
 }
