--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "typescript": "^4.9.5"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test"
@@ -42,6 +44,7 @@
     },
     "devDependencies": {
         "@testing-library/react": "^14.0.0",
+        "gh-pages": "^6.0.0",
         "history": "^5.3.0"
     }
 }
