--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "weather-forecast-jest-enzyme",
+    "name": "wea4chan",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://serpo-dev.github.io/wea4chan/",
     "dependencies": {
         "@ant-design/icons": "^5.1.4",
         "@testing-library/jest-dom": "^5.16.5",
@@ -43,6 +44,7 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@testing-library/react": "^14.0.0",
         "gh-pages": "^6.0.0",
         "history": "^5.3.0"
